# dog-breed-diet-planner-final

./: .gitattributes  .gitignore  DEPLOYMENT.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  page.tsx
.github/workflows/: ci.yml  deploy-api.yml  deploy-web.yml
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
apps/api/app/: __init__.py  config.py  database.py  main.py
apps/api/app/ai/: __init__.py  base.py  config.py  factory.py  fallback.py  observability.py
apps/api/app/ai/providers/: anthropic_provider.py  gemini.py  openai_provider.py
apps/api/app/middleware/: auth.py  rate_limiter.py
apps/api/app/ml/: breed_classifier.py  breed_labels.py  model_loader.py  pipeline.py  preprocessor.py
apps/api/app/models/: __init__.py  audit_log.py  base.py  diet_plan.py  pet.py  prediction.py  subscription.py  upload.py  user.py
apps/api/app/routers/: __init__.py  admin.py  auth.py  diet_plans.py  pets.py  predictions.py  reports.py
apps/api/app/schemas/: common.py  diet_plan.py  pet.py  prediction.py  user.py
apps/api/app/services/: ai_service.py  diet_engine.py  diet_service.py  pet_service.py  prediction_service.py  report_service.py  storage_service.py  user_service.py  vision_service.py
apps/api/app/utils/: cache.py  validators.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial_schema.py  0002_production_hardening.py  0003_ai_insights.py  0004_nullable_upload_id.py
apps/api/tests/: conftest.py  test_admin.py  test_auth.py  test_diet.py  test_pets.py  test_predictions.py
apps/web/: .dockerignore  .env.example  Dockerfile  next.config.ts  package-lock.json  package.json  (+2 more)
docs/: ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  E2_MEDIUM_VM_DEPLOYMENT_AUDIT.md  E2_MICRO_DEPLOYMENT_AUDIT.md  LIVE_SETUP_STEP_BY_STEP.md  ONE_SERVER_VM_WORKFLOW.md
(+47 files in other folders)
