[project]
name = "dog-breed-diet-planner-api"
version = "1.0.0"
description = "Dog Breed Diet Planner - FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Data validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # Auth — JWT signing
    "pyjwt[crypto]>=2.10.0",
    "passlib[bcrypt]>=1.7.4",

    # Storage (Cloudflare R2 / S3-compatible)
    "boto3>=1.35.0",

    # Image processing + Gemini AI
    "Pillow>=11.0.0",

    # File validation
    "python-magic>=0.4.27",

    # Rate limiting
    "slowapi>=0.1.9",

    # PDF generation
    "reportlab>=4.2.0",

    # Monitoring (optional — add sentry-sdk if you want error tracking)
    # "sentry-sdk[fastapi]>=2.18.0",

    # AI Provider
    "google-generativeai>=0.8.0",

    # Utilities
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "factory-boy>=3.3.0",
    # SQLite async driver for tests (avoids needing a real Postgres in CI)
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "ANN", "S", "B", "A", "C4"]
ignore = ["ANN101", "ANN102", "ANN401", "S101"]

[tool.ruff.per-file-ignores]
"tests/**" = ["ANN", "S"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
